Phase 2-4: Added behavior anomaly model, network analysis, dark web intel, API config management

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+# Virtual environment
 venv/
+
+# Python cache
 __pycache__/
 .ipynb_checkpoints/
+
+# Models
 *.pkl
+
+# Local environment variables
+config/.env
